WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89567
Web Inspector: don't report context ids before DidCommitLoad
https://bugs.webkit.org/show_bug.cgi?id=89567
Summary
Web Inspector: don't report context ids before DidCommitLoad
Yury Semikhatsky
Reported
2012-06-20 06:32:38 PDT
PageRuntimeAgent::restore() will unconditionally inspected page's frame tree and report context ids for all frames, this may trigger initialization of the contexts if DidCommitLoad event hasn't happened yet. This may lead to some unexpected results like the one described in
http://crbug.com/131623
Attachments
Patch
(6.01 KB, patch)
2012-06-20 06:36 PDT
,
Yury Semikhatsky
pfeldman
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2012-06-20 06:36:24 PDT
Created
attachment 148554
[details]
Patch
Pavel Feldman
Comment 2
2012-06-20 06:39:23 PDT
Comment on
attachment 148554
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=148554&action=review
> Source/WebCore/inspector/PageRuntimeAgent.cpp:89 > + if (m_inspectorAgent->didCommitLoadFired()) {
I would instead delegate original didCommitLoad instrumentation here and stored the state (i.e. copied the inspectorAgent's logic).
Yury Semikhatsky
Comment 3
2012-06-20 07:19:21 PDT
Comment on
attachment 148554
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=148554&action=review
>> Source/WebCore/inspector/PageRuntimeAgent.cpp:89 >> + if (m_inspectorAgent->didCommitLoadFired()) { > > I would instead delegate original didCommitLoad instrumentation here and stored the state (i.e. copied the inspectorAgent's logic).
This would require making this agent always enabled, otherwise we would miss didCommitLoad event. InspectorAgent is an agent that doesn't depend on other agents and is always enabled so it is a good place for storing the flag.
Pavel Feldman
Comment 4
2012-06-20 07:22:34 PDT
Ok, lets them simply move m_didCommitLoadFired into the InspectorPageAgent. It seems more appropriate and is only user there. It would remove the InspectorPageAgent->InspectorAgent dependency as well.
Yury Semikhatsky
Comment 5
2012-06-20 08:07:47 PDT
Committed
r120822
: <
http://trac.webkit.org/changeset/120822
>
Jeffrey Yasskin
Comment 6
2012-06-20 10:18:26 PDT
Where's the test to make sure this doesn't regress in the future?
Yury Semikhatsky
Comment 7
2012-06-20 23:56:54 PDT
(In reply to
comment #6
)
> Where's the test to make sure this doesn't regress in the future?
A test will go downstream since we can only reproduce it with Chromium extensions at the moment.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug