Web Inspector: don't report context ids before DidCommitLoad https://bugs.webkit.org/show_bug.cgi?id=89567

Reviewed by Pavel Feldman.

When inspector state is restored only report existing context ids
if "did commit load" even has already been dispatched.

* inspector/InspectorController.cpp:
(WebCore::InspectorController::InspectorController):
* inspector/PageRuntimeAgent.cpp:
(WebCore::PageRuntimeAgent::PageRuntimeAgent):
(WebCore::PageRuntimeAgent::restore):
* inspector/PageRuntimeAgent.h:
(WebCore):
(WebCore::PageRuntimeAgent::create):
(PageRuntimeAgent):

git-svn-id: svn://svn.chromium.org/blink/trunk@120822 bbb929c8-8fbe-4397-9dbb-9b2b20218538