third_party/WebKit/Source/WebCore/inspector/PageRuntimeAgent.cpp
@@ -39,6 +39,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "Document.h"
 #include "InjectedScript.h"
 #include "InjectedScriptManager.h"
+#include "InspectorAgent.h"
 #include "InspectorPageAgent.h"
 #include "InspectorState.h"
 #include "InstrumentingAgents.h"
@@ -53,10 +54,11 @@ namespace PageRuntimeAgentState {
 static const char reportExecutionContextCreation[] = "reportExecutionContextCreation";
 };
 
-PageRuntimeAgent::PageRuntimeAgent(InstrumentingAgents* instrumentingAgents, InspectorState* state, InjectedScriptManager* injectedScriptManager, Page* page, InspectorPageAgent* pageAgent)
+PageRuntimeAgent::PageRuntimeAgent(InstrumentingAgents* instrumentingAgents, InspectorState* state, InjectedScriptManager* injectedScriptManager, Page* page, InspectorPageAgent* pageAgent, InspectorAgent* inspectorAgent)
     : InspectorRuntimeAgent(instrumentingAgents, state, injectedScriptManager)
     , m_inspectedPage(page)
     , m_pageAgent(pageAgent)
+    , m_inspectorAgent(inspectorAgent)
     , m_frontend(0)
 {
 }
@@ -82,8 +84,13 @@ void PageRuntimeAgent::restore()
 {
     if (!m_state->getBoolean(PageRuntimeAgentState::reportExecutionContextCreation))
         return;
-    String error;
-    setReportExecutionContextCreation(&error, true);
+    // Only report existing contexts if the page did commit load, otherwise we may
+    // unintentionally initialize contexts in the frames which may trigger some listeners
+    // that are expected to be triggered only after the load is committed, see http://crbug.com/131623
+    if (m_inspectorAgent->didCommitLoadFired()) {
+        String error;
+        setReportExecutionContextCreation(&error, true);
+    }
 }
 
 void PageRuntimeAgent::setReportExecutionContextCreation(ErrorString*, bool enable)
